--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.App{
+  padding: 3% 8%;
+  font-family: 'Source Sans Pro', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  border: 1px solid #000000;
+  border-radius: 0px;
+  padding: 0 35px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+@media only screen and (max-width: 768px) {
+  .container{
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    border: none;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
